--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "Cake: Run Build",
-            "program": "${workspaceFolder}/src/MyConsole/bin/Debug/net6.0/MyConsole.dll",
+            "program": "${workspaceFolder}/src/ImaPo.Gtk/bin/Debug/net6.0/ImaPo.Gtk.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
