--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -1,17 +1,25 @@
 <Project>
     <!-- Centralize dependency management -->
     <ItemGroup>
-        <PackageVersion Include="Yarhl" Version="3.1.0" />
-
+        <PackageVersion Include="Yarhl" Version="4.0.0-preview.153" />
+        <PackageVersion Include="Yarhl.Media" Version="4.0.0-preview.153" />
+        
+        <PackageVersion Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
+        <PackageVersion Include="Eto.Forms" Version="2.6.1" />
+        <PackageVersion Include="Eto.Platform.Gtk" Version="2.6.1" />
+        <PackageVersion Include="GtkSharp.Dependencies" Version="1.1.1" />
+        <PackageVersion Include="Eto.Platform.Mac64" Version="2.5.11" />
+        <PackageVersion Include="Eto.Platform.Wpf" Version="2.5.11" />
+        
         <PackageVersion Include="nunit" Version="3.13.2" />
-        <PackageVersion Include="NUnit3TestAdapter" Version="4.1.0" />
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.0.0"/>
-        <PackageVersion Include="coverlet.collector" Version="3.1.0" />
+        <PackageVersion Include="NUnit3TestAdapter" Version="4.2.1" />
+        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.1.0"/>
+        <PackageVersion Include="coverlet.collector" Version="3.1.2" />
 
         <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="1.1.1" />
 
         <PackageVersion Include="StyleCop.Analyzers" Version="1.1.118" />
-        <PackageVersion Include="SonarAnalyzer.CSharp" Version="8.32.0.39516" />
-        <PackageVersion Include="Roslynator.Analyzers" Version="3.2.2" />
+        <PackageVersion Include="SonarAnalyzer.CSharp" Version="8.36.1.44192" />
+        <PackageVersion Include="Roslynator.Analyzers" Version="4.0.2" />
     </ItemGroup>
 </Project>
