--- a/src/ImaPo.UI/ImaPo.UI.csproj
+++ b/src/ImaPo.UI/ImaPo.UI.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Yarhl" />
     <PackageReference Include="Yarhl.Media" />
+    <PackageReference Include="YamlDotNet" />
     <PackageReference Include="Eto.Forms" />
     <PackageReference Include="Microsoft.Toolkit.Mvvm" />
   </ItemGroup>
