:shirt: Set contact name, disable Mac builds

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -63,7 +63,7 @@ jobs:
     name: "[${{ matrix.os }}] Build and test"
     strategy:
       matrix:
-        os: [ macos-latest, windows-latest ]
+        os: [ windows-latest ]
     runs-on: ${{ matrix.os }}
     steps:
       - name: "Checkout"
