--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,4 +13,8 @@
         "editor.formatOnType": true
     },
     "prettier.proseWrap": "always",
+    "cSpell.words": [
+        "Globbing",
+        "imapo"
+    ],
 }
