--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -5,6 +5,8 @@
         <PackageVersion Include="Yarhl.Media" Version="4.0.0-preview.153" />
         <PackageVersion Include="YamlDotNet" Version="11.2.1" />
         <PackageVersion Include="Microsoft.Extensions.FileSystemGlobbing" Version="6.0.0" />
+        <PackageVersion Include="System.Linq.Async" Version="6.0.1" />
+        <PackageVersion Include="Yoh.Text.Json.NamingPolicies" Version="0.1.1" />
 
         <PackageVersion Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
         <PackageVersion Include="Eto.Forms" Version="2.6.1" />
